// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MovieCardButtons 1`] = `
<div
  className="movie-card__buttons"
>
  <button
    className="btn btn--play movie-card__button"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="19"
      viewBox="0 0 19 19"
      width="19"
    >
      <path
        clipRule="evenodd"
        d="M0 0L19 9.5L0 19V0Z"
        fill="#EEE5B5"
        fillRule="evenodd"
      />
    </svg>
    <span>
      Play
    </span>
  </button>
  <button
    className="btn btn--list movie-card__button"
    onClick={[Function]}
    type="button"
  >
    <svg
      height="20"
      viewBox="0 0 19 20"
      width="19"
    >
      <use
        xlinkHref="#add"
      />
    </svg>
    <span>
      My list
    </span>
  </button>
</div>
`;

exports[`Render MovieCardButtons with AddReviewButton 1`] = `
<div
  className="movie-card__buttons"
>
  <button
    className="btn btn--play movie-card__button"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="19"
      viewBox="0 0 19 19"
      width="19"
    >
      <path
        clipRule="evenodd"
        d="M0 0L19 9.5L0 19V0Z"
        fill="#EEE5B5"
        fillRule="evenodd"
      />
    </svg>
    <span>
      Play
    </span>
  </button>
  <button
    className="btn btn--list movie-card__button"
    onClick={[Function]}
    type="button"
  >
    <svg
      height="20"
      viewBox="0 0 19 20"
      width="19"
    >
      <use
        xlinkHref="#add"
      />
    </svg>
    <span>
      My list
    </span>
  </button>
  <a
    className="btn movie-card__button"
    href="#"
  >
    Add review
  </a>
</div>
`;
